[gd_scene load_steps=4 format=3 uid="uid://b1rff46sejmy8"]

[ext_resource type="Script" uid="uid://bt2wqvu6bliwg" path="res://elements/UI/LevelUpUI/level_up.gd" id="1_fdaio"]
[ext_resource type="PackedScene" uid="uid://6ivay0q54rwn" path="res://elements/UI/Option/Option.tscn" id="2_yf5so"]

[sub_resource type="LabelSettings" id="LabelSettings_fj0fh"]
font_size = 72

[node name="LevelUp" type="CanvasLayer"]
script = ExtResource("1_fdaio")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 1601.0
offset_bottom = 900.0

[node name="Label" type="Label" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Выберите улучшение"
label_settings = SubResource("LabelSettings_fj0fh")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TextureButton" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource("2_yf5so")]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureButton2" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource("2_yf5so")]
layout_mode = 2

[node name="VSeparator2" type="VSeparator" parent="Control/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureButton3" parent="Control/VBoxContainer/HBoxContainer" instance=ExtResource("2_yf5so")]
layout_mode = 2
